[package]
name = "amnesia"
edition = "2021"
license = "MIT"
version = "0.1.2"
readme = "README.md"
repository = "https://github.com/m1guelpf/amnesia"
authors = ["Miguel Piedrafita <rust@miguel.build>"]
description = "An expressive interface for interacting with a Cache."

[dependencies]
serde = "1.0.193"
thiserror = "1.0.50"
serde_json = { version = "1.0.108", optional = true }
ensemble = { version = "0.0.5", default-features = false, optional = true }
bitcode = { version = "0.5.0", optional = true, default-features = false, features = ["serde"] }

[dev-dependencies]
ensemble = { version = "0.0.5", features = ["mysql"] }
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread"] }

[features]
default = ["memory"]
memory = ["dep:bitcode"]
database = ["dep:ensemble", "dep:serde_json"]

[package.metadata.docs.rs]
features = ["memory", "database"]
